Revert "Fix alignment of page-edit and page-infos in page header"
This reverts commit 3a6357ff28d4dd712c6e3c080e61427bb5be9c4a.

--- a/resources/stylesheets/component/tablet/pageheader.page-edit.less
+++ b/resources/stylesheets/component/tablet/pageheader.page-edit.less
@@ -1,6 +1,6 @@
 .bs-page-edit {
-	max-width: 48%;
 	width: 100%;
+	max-width: 100%;
 
 	& > ul {
 		li {
