--- a/resources/stylesheets/component/tablet/pageheader.page-infos.less
+++ b/resources/stylesheets/component/tablet/pageheader.page-infos.less
@@ -1,6 +1,6 @@
 .bs-page-info-element {
-	max-width: 52%;
 	width: 100%;
+	max-width: 100%;
 
 	& > ul {
 		display: flex;
